[design][bug] fix spacing issues

--- a/src/sass/modules/_nav.scss
+++ b/src/sass/modules/_nav.scss
@@ -228,6 +228,10 @@
   }
 }
 
+.m-nav-character:not(:last-child) {
+  margin: 0;
+}
+
 .is-night-mode {
   .m-nav-shade {
     background-color: $dark-alpha-08;
